--- a/design/style.css
+++ b/design/style.css
@@ -5,21 +5,24 @@
     top:0;
 }
 .titre{
-    position: fixed;
+    position: relative;
     justify-content: center;
     align-items: center;
     color:white;
-    
+    display: center;
+    margin-left: 30%;
+    margin-right: 30%;
 }
-body{
-    display: flex;
+ body{
+    position:absolute;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
     padding-left:15px ;
     padding-right: 15px;
-    background-image: url("../pictures/bkgd_page.jpg");
+
     background-size: cover;
-}
+} 
 .conteneur{
  background-color:white;
    
@@ -27,13 +30,13 @@ body{
 
 
 .main-content img {
-    /* Limitez la taille de l'image pour éviter qu'elle ne dépasse */
+    Limitez la taille de l'image pour éviter qu'elle ne dépasse */
     max-width: 100%;
     max-height: 100%;
 }
 
 .main-menu ul, main-menu li {
-    marging:0;
+    position: relative;
     padding:0;
     display: flex;
     justify-content: right;
@@ -48,6 +51,7 @@ display:inline ;
     text-decoration:none;
     padding:0px 10px;
     font-size:20px;
+    float:left;
 }
 .main-menu a:hover {
     color: rgb(16, 107, 120);
@@ -59,26 +63,33 @@ nav li:not(:last-child) {
 
 
 .date{
-    font-size:10px;
+    font-size:50px;
 }
 
 .photos{
     height: 150px;
     width: 200px;
-}
-article{
-    width: 280px;
-    float: center;
-}
-main{
-    width: 280px;
     float: left;
-}
-.vignettes img {
-    margin: 10 px; /* Espace entre les images */
-    float: right;
+    margin: 10px;
 }
 
+/* article{
+    width: 280px;
+    float: center;
+    display: flex;
+} 
+
+main{
+    width: 280px; */
+    display: flex;
+}  */
+.vignettes img {
+    margin: 10 px; 
+    float: right; 
+}
+.clear{
+    clear: both;
+}
 hr{
     border:none;
     border-top:1px solid black;
@@ -89,9 +100,9 @@ hr{
     color: #b32;
     margin: 40px; 
     flex-direction: row;
+    float: right;
 }
 
 .vignettes a:hover {
     color: #4c4c4b;
 }
-
