--- a/design/style.css
+++ b/design/style.css
@@ -1,8 +1,10 @@
 .logo{
-    
+    display: inline-block;
     justify-content: left;
     align-items: left;
     top:0;
+    width: 159px;
+    height: 67px;
 }
 .titre{
     position: relative;
@@ -23,28 +25,37 @@
 
     background-size: cover;
 } 
-.conteneur{
- background-color:white;
-   
+main{
+    background-color:white;
+    margin-left:60px ;
 }
 
-
-.main-content img {
-    Limitez la taille de l'image pour éviter qu'elle ne dépasse */
-    max-width: 100%;
-    max-height: 100%;
+.paysage{
+    margin-left: 10px;
+    margin-top: 10px;
+    width: 373px;
+    height: 273px;
 }
-
-.main-menu ul, main-menu li {
-    position: relative;
-    padding:0;
+.paysage3{
+    float: left;
+    width: 480px;
+    height: 480px;
+}
+.book{
+    width: 120px;
+    height: 157px;
+}
+.main-menu ul, li {
     display: flex;
-    justify-content: right;
     align-items: right;
+    justify-content: right;
+    position: relative;
     top:0;
 }    
-.main-menu li {
-display:inline ;
+nav {
+    display:inline-block ;     
+    margin-left: 150px;
+    margin-right: 0;
 }
 .main-menu a {
     color:white;
@@ -67,25 +78,29 @@ nav li:not(:last-child) {
 }
 
 .photos{
-    height: 150px;
-    width: 200px;
-    float: left;
+    height: 184px;
+    width: 187px;
+    float: right;
     margin: 10px;
 }
 
-/* article{
-    width: 280px;
-    float: center;
+article{
     display: flex;
 } 
 
-main{
-    width: 280px; */
+.conteneur{
     display: flex;
-}  */
+} 
+.armées{
+    margin-left: 10px;
+    width: 30%;  
+}
+    
+
 .vignettes img {
-    margin: 10 px; 
+   
     float: right; 
+    display: flex;
 }
 .clear{
     clear: both;
@@ -98,9 +113,10 @@ hr{
 .vignettes a{
     text-decoration:none;
     color: #b32;
-    margin: 40px; 
+    
     flex-direction: row;
     float: right;
+    display: flex;
 }
 
 .vignettes a:hover {
